Name:                montg-reduce
Version:             0.0.1
Synopsis:            A simple implementation of Montgomery reduction algorithm
Description:
    A simple implementation of Montgomery reduction algorithm, Implemented
    with Number-parameterized types.
Homepage:            https://github.com/bjin/montg-reduce
License:             BSD3
License-file:        LICENSE
Author:              Bin Jin
Maintainer:          bjin1990+haskell@gmail.com
Stability:           experimental
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.8
Bug-reports:         https://github.com/bjin/montg-reduce/issues
Extra-source-files:
    Test.hs

Library
    Exposed-modules:     Math.Montg
    Build-depends:       base >= 3.0 && < 5.0
    Ghc-options:         -Wall -O2

Test-suite Test
    Main-is:             Test.hs
    Type:                exitcode-stdio-1.0

    Build-depends:       
        base >= 3.0 && < 5.0, QuickCheck >= 2.0 && < 3.0,
        test-framework >= 0.4 && < 1.0, test-framework-quickcheck2 >= 0.2 && < 1.0
